tests/errors/collections/list_equality_non_primitives.sad
method foo() {}
items1 = [foo]
items2 = [foo]
show(items1 == items1)
show(items1 == items2)
